--- a/elasticsearch-nest-webapi-angularjs/elasticsearch-nest-webapi-angularjs.csproj
+++ b/elasticsearch-nest-webapi-angularjs/elasticsearch-nest-webapi-angularjs.csproj
@@ -110,7 +110,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\site.css" />
     <Content Include="index.html" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -121,7 +123,9 @@
   <ItemGroup>
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\app\app.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\SearchController.cs" />
@@ -129,9 +133,12 @@
     <Compile Include="Models\Post.cs" />
     <Compile Include="Models\SearchResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ElasticConfig.cs" />
+    <Compile Include="Services\ElasticIndexService.cs" />
     <Compile Include="Services\ElasticSearchService.cs" />
     <Compile Include="Services\ISearchService.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utils\Extensions.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
