Upgraded to NEST 2.3.0

--- a/elasticsearch-nest-webapi-angularjs/Web.config
+++ b/elasticsearch-nest-webapi-angularjs/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
     <appSettings>
-        <add key="indexName" value="stack2" />
+        <add key="indexName" value="stackoverflow" />
         <add key="elastisearchUrl" value="http://localhost:9200" />
     </appSettings>
     <system.web>
@@ -29,16 +29,8 @@
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
-                <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
-            </dependentAssembly>
-            <dependentAssembly>
                 <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
-            </dependentAssembly>
-            <dependentAssembly>
-                <assemblyIdentity name="Elasticsearch.Net" publicKeyToken="96c599bbe3e70f5d" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
