refactor: replace binary favicon with svg asset

--- a/elasticsearch-nest-webapi-angularjs/Web.config
+++ b/elasticsearch-nest-webapi-angularjs/Web.config
@@ -25,6 +25,17 @@
             <remove name="TRACEVerbHandler" />
             <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
         </handlers>
+        <defaultDocument enabled="true">
+            <files>
+                <clear />
+                <add value="Content/client-app/index.html" />
+            </files>
+        </defaultDocument>
+        <staticContent>
+            <remove fileExtension=".json" />
+            <mimeMap fileExtension=".json" mimeType="application/json" />
+            <mimeMap fileExtension=".webp" mimeType="image/webp" />
+        </staticContent>
     </system.webServer>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
