--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,9 @@ paket-files/
 .idea/
 *.sln.iml
 elasticsearch-nest-webapi-angularjs/data/*
+
+client/node_modules/
+
+client/dist/
+
+elasticsearch-nest-webapi-angularjs/Content/client-app/
