--- a/elasticsearch-nest-webapi-angularjs/elasticsearch-nest-webapi-angularjs.csproj
+++ b/elasticsearch-nest-webapi-angularjs/elasticsearch-nest-webapi-angularjs.csproj
@@ -107,9 +107,6 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\site.css" />
-    <Content Include="index.html" />
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
@@ -121,11 +118,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\angular.min.js" />
-    <Content Include="Scripts\app\app.js" />
-    <Content Include="Scripts\ui-bootstrap-custom-tpls-0.14.3.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\client-app\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
